--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -364,4 +364,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="action_order">Actie bestelling</string>
     <string name="load_default_settings">Laad standaardinstellingen</string>
     <string name="drag">Sleep</string>
+    <string name="file_encryption_password">Wachtwoord voor bestandsversleuteling</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">Geen wachtwoord ingesteld, kan niet versleutelen of decoderen.\nGa naar Instellingen -&gt; Algemeen -&gt; Wachtwoord om een wachtwoord in te stellen.</string>
+    <string name="encrypt_file_content">Versleutel bestandsinhoud</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">Kon bestandsinhoud niet versleutelen. Het bestand is niet opgeslagen.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Kon bestandsinhoud niet decoderen. Heeft u een verkeerd wachtwoord gebruikt? Is het bestand echt versleuteld met Markors AES encryptie?</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">Wachtwoord is al ingesteld Een nieuw wachtwoord instellen zal het bestaande wachtwoord overschrijven en u zult mogelijk geen toegang meer hebben tot bestanden indien u het wachtwoord vergeet.</string>
 </resources>
