--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -87,7 +87,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reverse_order">தலைகீழ் ஒழுங்கு</string>
     <string name="contribute">பங்கேற்க்க</string>
     <string name="donate">நன்கொடை</string>
-    <string name="project_page">இந்த செயலியின் வலைப்பக்கம்</string>
+    <string name="project_page">இந்த திட்டத்தின் வலைப்பக்கம்</string>
     <string name="press_back_again_to_exit">வெளியேற மீண்டும் அழுத்தவும்</string>
     <string name="exit">வெளியேறு</string>
     <string name="undo">செயல்தவிர்</string>
@@ -116,6 +116,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="refresh">புதுப்பி</string>
     <string name="create_shortcut">குறுக்குவழியை உருவாக்கு</string>
     <string name="tried_to_create_shortcut_for_this_notice">உங்கள் முகப்பு பக்கத்தில் ஒரு குருக்குவழியை உருவாக்க முயற்சி செய்யப்பட்டது. சில பயன்பாட்டு ஏவிகள் இத்தகைய முயற்சிக்கு ஆதரவு தராது.</string>
+    <string name="file_not_in_save_path_do_import_notice__appspecific">தேர்ந்தெடுக்கப்பட்ட ஆவணமானது இந்த செயலியின் குறிப்புப்புத்தகத்தில் இல்லை. இந்த ஆவணத்தை தற்போதைய கோப்புறைக்கு நகலெடுக்க விரும்புகிறீர்களா? இந்த செயலானது ஏற்கனவே இந்த கோப்புறையில் அதே பெயரில் உள்ள ஆவணத்தின் மீது மேலெழுதப்படும்.</string>
+    <string name="file_not_in_current_folder_do_copy__appspecific">ஆவணம் தற்போதய கோப்புறையில் இல்லை. அதை தற்போதைய கோப்புறைக்கு நகலெடுக்க விரும்புகிறீர்களா? து செயல் அந்த கோப்புறையில் ஏற்கனவே அதே பெயரில் வேறு ஏதெனும் ஆவணம் இருந்தால் அதன் மீது மேலெழுதப்படும்.</string>
     <string name="files_and_folders">கோப்பு மற்றும் கோப்புறைகள்</string>
     <string name="document_browser">ஆவணங்களின் உலாவி</string>
     <string name="file_browser">கோப்பு உலாவி</string>
@@ -135,6 +137,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlighting_delay">தனிப்படுத்தலுக்கான இடைவெளி</string>
     <string name="highlighting_enabled_or_not__appspecific">உள்ளீடு செய்ய பட்ட உறை தனிப்படுத்த வேண்டுமா இல்லையா என்பதை கட்டுப்படுத்துக</string>
     <string name="control_font_size_in_editor">தொகுப்பியில் எழுத்துருவின் அளவை கட்டுப்படுத்தவும்</string>
+    <string name="textactions_show_useful_actions_description__appspecific">கீழே கையடக்கமான பொத்தான்களை கொண்ட ஒரு பட்டியை காண்பிக்கவும். இந்த உரை நடவடிக்கைகள் உரையை மாற்றவோ அல்லது உரையில் ஏதேனும் ஒரு நடவடிக்கையை மேற்கொள்ளவும் உதவுகிறது.</string>
     <string name="load_last_opened_folder_at_startup">கடைசியாக திறந்த கோப்புறையை செயலியின் தொடக்கத்தின் போது ஏற்றவும்</string>
     <string name="format">வடிவமைப்பு</string>
     <string name="contexts">சூழமைவு</string>
@@ -147,8 +150,18 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="empty_file">வெற்று ஆவணம்</string>
     <string name="break_page_pdf_print">பக்கங்களை பிரித்தெடு (PDF/அச்சடித்தல்)</string>
     <string name="underline">அடிக்கோடு</string>
+    <string name="underline_hex_color_wether_or_not_to_description__appspecific">நிறங்களுக்கு ஏற்ப Hex வண்ண குறியீடுகளை அடிக்கோடிட்டு காட்டவா</string>
     <string name="underline_hex_color_codes">Hex வண்ண குறியீடுகளை அடிக்கோடிடு</string>
+    <string name="insert_current_date_when_starting_new_task">ஒரு புதிய செயலை தொடங்கும் போது தற்போதைய தேதியை சேர்க்கவும்</string>
     <string name="tasks_with_todays_date">இன்றைய தேதியை கொண்டிருக்கும் செயல்கள்</string>
+    <string name="append_contexts_and_projects">சூழல்கள் மற்றும் திட்டங்களையும் சேர்க்கவும்</string>
+    <string name="append_contexts_and_projects_on_end_of_task">உரை நடவடிக்கைகளுக்கு ஏற்ப ஒரு செயலின் முடிவில் சூழல்களையும் மற்றும் திட்டங்களையும் சேர்க்கவும்</string>
+    <string name="rtl_rendering">RTL(வலமிருந்து இடம்) ஒழுங்கமைவு</string>
+    <string name="highlight_line_ending">வரி முடிவை தனிப்படுத்தி காட்டு</string>
+    <string name="highlight_line_ending_if_two_or_more_spaces">வரி முடிவில் உள்ள இரண்டு அல்லது மூன்று இடைவேளிகளை முன்னிலைப்படுத்து</string>
+    <string name="use_monospace_for_code">நிரல்களுக்கு monospace எழுத்துருவை பயன்படுத்து</string>
+    <string name="disable_code_block_highlight">நிரல் தொகுதிகளுக்கு முன்னிலைப்படுத்தலை முடக்கு</string>
+    <string name="use_different_fonttype_slow_down">பல்வேறு வகையான எழுத்துரு வகைகளை பயன்படுத்தவும். எழுத்துருவை மாற்றுவது செயலியின் செயல்திறனை அவ்வவ்போது பாதிக்கும்.</string>
     <string name="general">பொதுவானவை</string>
     <string name="resources">வளங்கள்</string>
     <string name="space_between_lines_in_percent">வரிகளுக்கு இடையேயான இடைவெளி சதவீதம்</string>
@@ -156,14 +169,183 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="archive_does_move_done_tasks">முடிக்கப்பட்ட செயல்களை அதே கோப்புறையில் உள்ள குறிப்பிட்ட ஆவணத்திற்கு நகர்த்தவும்</string>
     <string name="sort_tasks_by_selected_order">தேர்ந்தெடுக்கப்பட்ட ஒழுங்கின் படி செயல்களை வரிசைப்படுத்து</string>
     <string name="special_key">சிறப்பு விசை</string>
+    <string name="key_page_up">பக்கம்  மேலே (மேல்நோக்கி நகர்த்து)</string>
+    <string name="key_page_down">பக்கம் கீழ் (கீழ்நோக்கி நகர்த்து)</string>
+    <string name="move_text_one_line_up">உரையை ஒரு வரி மேல் நோக்கி நகர்த்து</string>
+    <string name="move_text_one_line_down">உரையை ஒரு வரி கீழ் நோக்கி நகர்த்து</string>
+    <string name="key_pos_1">வரி தொடக்கம் (துவக்க இடம்)</string>
+    <string name="key_pos_end">வரி முடிவு (முடியும் இடம்)</string>
     <string name="key_pos_1_document">ஆவணத்தின் ஆரம்பம்</string>
     <string name="key_pos_end_document">ஆவணத்தின் முடிவு</string>
     <string name="key_ctrl_a">அனைத்தையும் தேர்வு செய் (Ctrl+A)</string>
     <string name="key_tab">பட்டியலிடுவோன்</string>
     <string name="start_on_bottom">கீழிருந்து தொடங்கு</string>
+    <string name="start_on_bottom_when_loading_document">ஒரு ஆவணம் ஏற்றப்பட்டவுடன், சுட்டியை அந்த ஆவணம் முடிவடையும் இடத்தில் வைக்கவும்</string>
+    <string name="unordered_list_character">வரிசைப்படுத்தப்படாத பட்டியலின் எழுத்துக்குறி</string>
+    <string name="character_to_start_items_of_unordered_list_with">வரிசைப்படுத்தப்படாத பட்டியலுக்கு எந்த எழுத்துக்குறியை பயன்படுத்த விரும்புகிறீர்கள்</string>
+    <string name="unordered_list_char_dash">கோடு (-)</string>
+    <string name="unordered_list_char_asterisk">நட்சத்திர குறி (*)</string>
+    <string name="unordered_list_char_plus">கூட்டல் குறி (+)</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor ஆல் உங்கள் சாதனத்தில் இருக்கும், இணையத்தொடர்பு தேவைப்படாத ஆவணங்களை மட்டுமே திருத்த முடியும் மற்றும் முழு கோப்பு பாதை வழங்காத கோப்பு மேலாளர் செயலிக்கு ஆதரவளிக்காது.</string>
+    <string name="configure_in_the_apps_settings">செயலியின் அமைப்புகளுடன் கட்டமைக்கவும்</string>
+    <string name="vertical_alignment">செங்குத்து சீரமைப்பு</string>
+    <string name="horizontal_alignment">கிடைமட்ட சீரமைப்பு</string>
+    <string name="default_">இயல்புநிலை</string>
     <string name="left">இடது</string>
     <string name="right">வலது</string>
     <string name="top">மேல்</string>
     <string name="bottom">கீழ்</string>
+    <string name="center">மையம்</string>
+    <string name="textaction_spacing">உரை செயலுக்கான இடைவெளி</string>
+    <string name="horizontal_space_between_textactions">உரை நடவடிக்கை பொத்தான்களுக்கு நடுவே கிடைமட்ட இடைவெளி</string>
+    <string name="center_text">மைய உரை</string>
+    <string name="edit_text_in_center_of_screen">திரையின் மையத்தில் உள்ள உரையை திருத்துக</string>
+    <string name="clipboard">இடைநிலைப் பலகை</string>
+    <string name="select_existing_document">ஏற்கனவே இருக்கும் ஆவணத்தை தேர்வு செய்யவும்</string>
+    <string name="open_source_licenses">திறந்த மூலநிரல் உரிமங்கள்</string>
+    <string name="rate_this_app">இந்த செயலியை மதிப்பீடுக</string>
+    <string name="translate">மொழிபெயர்ப்பு</string>
+    <string name="more_info_and_help">மேலும் தகவல் மற்றும் உதவி</string>
+    <string name="report_bugs">பிழைகளை தெரிவியுங்கள்</string>
+    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">இந்த செயலியின் நிரலை எழுதியவருக்கு நன்கொடை தருவது, அல்லது இந்த திட்டத்தில் பங்களிப்பது தொடர்பாக மேலும் தகவலுக்கு.</string>
+    <string name="join_community">சமூகத்தில் சேர்க</string>
+    <string name="bug_reports_suggest_improvements">இந்த செயலி குறித்த கருத்துக்கள் மற்றும் பிழைகளை தெரிவிக்கவும் அல்லது மேம்படுத்தத்தல்களை பரிந்துரைக்கவும்</string>
+    <string name="help_translating_this_app">மற்ற மொழிகளில் இந்த செயலியை மொழிபெயர்க்கவும்</string>
+    <string name="source_code">மூல நிரல்</string>
+    <string name="project_license">இந்த திட்டத்தின் உரிமம்</string>
+    <string name="project_contribution_info">திட்டத்திற்கு பங்களிப்பது தொடர்பான தகவல்</string>
+    <string name="more_info_on_how_to_contribute_to_this_project">இந்த திட்டத்திற்கு எப்படி பங்களிப்பது குறித்து மேலும் தகவல்களுக்கு</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">இந்த திட்டத்திற்கு நிரல் எழுதும் பணிக்கு பங்களியுங்கள். அனைவரும் இதற்காக வரவேற்கப்படுகின்றனர், புதுமுகங்கள் உட்பட</string>
+    <string name="project_team">திட்டக்குழு</string>
+    <string name="contributors_public_add_yourself_description">பங்களிப்பாளரின் விவரத்தை காண்பிக்கவும். தன்னுடைய பங்களிப்பை வழங்கிய பிறகு அந்த நபரின் விருப்பத்தின் படியே இங்கே அவரின் விவரங்கள் காண்பிக்கப்படவேண்டும்</string>
+    <string name="descending">இறங்கு வரிசை</string>
+    <string name="ascending">ஏறுவரிசை</string>
+    <string name="disable_spelling_underline">எழுத்து பிழைகளை அடிகோடிடுவதை முடக்கவும்</string>
+    <string name="location">இடம்</string>
+    <string name="text_lines">உரை வரிகள்</string>
+    <string name="text_characters">உரை எழுத்துக்கள்</string>
+    <string name="text_words">உரை வார்த்தைகள்</string>
+    <string name="directory">கோப்பகம்</string>
+    <string name="recently_viewed_documents">சமீபத்தில் பார்த்த ஆவணங்கள்</string>
+    <string name="details">விவரங்கள்</string>
+    <string name="calendar">நாட்காட்டி</string>
+    <string name="warning_disallowed_sd_access">எச்சரிக்கை! இந்த ஆவணத்தை சேமிக்க இந்த செயலிக்கு அனுமதி இல்லை, இந்த ஆவணத்தில் செய்த அணைத்து மாற்றங்களும் அழிக்கப்பட்டுவிடும். இந்த பிரச்சனையை சரி செய்ய எந்த வாய்ப்பும் இல்லை. ஆண்ட்ராய்டு அணைத்து அனுமதிகளையும் இங்கே நிராகரிக்கிறது.</string>
+    <string name="error_picture_selection">எந்த படத்தையும் எடுக்கவோ, தேர்வோ அல்லது சேமிக்கவோ இல்லை.</string>
+    <string name="gallery_picture">காட்சியகத்தில் உள்ள படம்</string>
+    <string name="camera_picture">ஒளிப்பட கருவியின் படம்</string>
+    <string name="description">விவரக்குறிப்பு</string>
+    <string name="edit_picture">படத்தை திருத்து</string>
+    <string name="math">கணிதம்</string>
+    <string name="table_of_contents">உள்ளடக்கங்களின் அட்டவணை</string>
+    <string name="miscellaneous">இதர</string>
+    <string name="textaction">உரை நடவடிக்கை</string>
+    <string name="textactions">உரை நடவடிக்கைகள்</string>
+    <string name="prefer_view">திருத்துவதற்க்காண பார்வை முறையை தேர்வு செய்யவும்</string>
+    <string name="no_calendar_app_is_installed">நாட்காட்டி செயலி நிறுவப்படவில்லை!</string>
+    <string name="popular_documents">பிரபலமான ஆவணங்கள்</string>
+    <string name="color">நிறம்</string>
+    <string name="zero_width_space">சுழி அகல இடைவெளி</string>
+    <string name="basic_color_scheme">அடிப்படை நிற திட்டம்</string>
+    <string name="preset">முன்னமைவு</string>
+    <string name="foreground">முன்புலம்</string>
+    <string name="background">பின்புலம்</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">முன்னணி அல்லது பின்னணி யில் உள்ள உரையின் நிறத்தை மாற்றவா? Hex நிற குறீயீடுகளை நுழைக்கவும் முடியும்.</string>
+    <string name="type">வகை</string>
+    <string name="folder">கோப்புறை</string>
+    <string name="folder_is_created_without_extension">-கோப்புறையானது கோப்பு வகை நீட்டிப்பு இல்லாமல் உருவாக்கப்படும்</string>
+    <string name="keep_existing_file">-ஆவணங்களும் மற்றும் கோப்புறைகளும் ஒன்றையொன்று மேலெழுதப்படுவதில்லை</string>
+    <string name="multiple_windows">பல சாளரங்கள்</string>
     <string name="font">எழுத்துரு</string>
+    <string name="open_new_documents_always_in_new_window">ஆவணங்களை எப்போதும் தனி சாளரங்களில் திறக்கவும். ஆவணங்கள் இடையே மாற்ற உங்கள் சாதனத்தின் \'சமீபத்தியவை\' களுக்கான பொத்தானை பயன்படுத்தவும்.</string>
+    <string name="enter_or_select_format">வடிவத்தை உள்ளீடு அல்லது தேர்வு செய்யவும்</string>
+    <string name="pick_date">தேதியைத் தேர்ந்தெடு</string>
+    <string name="pick_time">நேரத்தை தேர்வுசெய்</string>
+    <string name="get_format_instead_date_or_time">தேதி அல்லது நேரத்திற்கு பதிலாக அதன் வடிவத்தை பெறுக</string>
+    <string name="always_use_current_date_and_time">எப்போதும் தற்போதைய தேதி &amp; நேரத்தை பயன்படுத்தவும்</string>
+    <string name="result">முடிவு</string>
+    <string name="just_time">நேரம் மட்டும்</string>
+    <string name="just_date">தேதி மட்டும்</string>
+    <string name="last_used">கடைசியாகப் பயன்படுத்தப்பட்டது</string>
+    <string name="my_note">என்_குறிப்பு</string>
+    <string name="close">மூடவும்</string>
+    <string name="cancel">ரத்து செய்</string>
+    <string name="do_you_like_this_project_want_donate_to_keep_alive">இந்த செயலியை மகிழ்ச்சியாக அனுபவிக்கிறீர்களா? மேலும் முன்னேற்றங்களுக்கு மற்றும் பிழை நீக்கங்களுக்கு ஆதரவளிக்க விரும்புகிறீர்களா?\n\nசெயலிகளை உருவாக்குதல் மற்றும் வலைப்பக்கங்களை எழுதுவதற்கு அதிக நேரம் தேவைப்படுகிறது. இந்த செயலி தொடர்ச்சியாக இயங்க, தயவு செய்து ஒரு சிறிய நன்கொடையை வழங்குங்கள்!\n\nஇந்த செயலி ஓய்வு நேரங்களில் உருவாக்கப்படுகிறது, முற்றிலும் இலவசமாக மற்றும் எந்த விளம்பரங்களும் இல்லாமல்!</string>
+    <string name="app_start_tab">செயலியின் தொடக்க தாவல்</string>
+    <string name="swipe_to_change_mode">பயன்முறையை மாற்ற தேய்</string>
+    <string name="folder_first">முதலில் கோப்புறை</string>
+    <string name="go_to">செல்லுங்கள்</string>
+    <string name="appdata_public">செயலித்தரவு (பொது)</string>
+    <string name="appdata_private">செயலித்தரவு (தனிப்பட்டவை)</string>
+    <string name="appdata_sdcard">செயலித்தரவு (நினைவக அட்டை)</string>
+    <string name="internal_storage">அகச் சேமிப்பகம்</string>
+    <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote என்பது விரைவாக குறிப்புகளை எழுதுவதற்கு ஒரு தேர்வாகும். இது Markdown முறையில் உள்ள ஒரு ஆவணமாகும் இதன் இயல்புநிலை இடமானது &gt;Notebook/QuickNote.md&lt;, நீங்கள் இந்த ஆவணத்திற்கு வேறு ஒரு கோப்பு பாதையை அமைப்புகளில் மாற்ற முடியும்.</string>
+    <string name="todo_is_the_easiest_way_">உங்கள் செயல்களை நிர்வகிக்க ToDo வகை ஆவணத்தை பயன்படுத்தவும். அது  todo.txt முறையில் உள்ள ஆவணமாகும் இதன் இயல்புநிலை இடமானது &gt;Notebook/todo.txt&lt;, நீங்கள் இந்த ஆவணத்திற்கு வேறு ஒரு கோப்பு பாதையை அமைப்புகளில் மாற்ற முடியும்.</string>
+    <string name="navigationbar_color">வழிநடத்தும் பட்டியின் நிறம்</string>
+    <string name="black">கருப்பு</string>
+    <string name="white">வெள்ளை</string>
+    <string name="view">பார்வை</string>
+    <string name="view_mode">காட்டும் முறை</string>
+    <string name="edit_mode">திருத்தும் பயன்முறை</string>
+    <string name="mount_storage">சேமிப்பகத்தை ஏற்று</string>
+    <string name="application_needs_access_to_storage_mount_it">இந்த சேமிப்பகத்தை அணுக அனுமதி தேவைப்படுகிறது. இந்த அனுமதியை தர சேமிப்பகத்தை ஏற்றவும். இதனை இந்த திரையில் உறுதிப்படுத்தி ஒரு மேலெழும்பும் திரையை பெறுக. அங்கே சேமிப்பகத்தை தேர்ந்தெடுத்து தேர்வு செய் என்பதை அழுத்தவும்.</string>
+    <string name="share_into">இதில் பகிரவும்</string>
+    <string name="favourite">பிடித்தவை</string>
+    <string name="favourites">பிடித்தவைகள்</string>
+    <string name="please_wait">தயவு செய்து காத்திருக்கவும்</string>
+    <string name="app_start_folder">செயலிக்கான தொடக்க கோப்புறை</string>
+    <string name="tab_width">தாவல் அகலம்</string>
+    <string name="list_in_recent_files">சமீபத்திய கோப்புகளில் பட்டியல்</string>
+    <string name="reload">திரும்ப ஏற்று</string>
+    <string name="wrap_words">சொற்களை மடக்கு</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">உரை திரை அகலத்திற்குள் பொருந்தவில்லை எனில் ஒரு மென்மையான இடைவெளியை பயன்படுத்தவும் அல்லது கிடைமட்ட சுருளும் முறையை செயல்படுத்து.</string>
+    <string name="always_open_with_this_app">எப்போதும் இந்த செயலியை கொண்டு திறக்கவும்</string>
+    <string name="template">வார்ப்புரு</string>
+    <string name="send_debug_log">Debug பதிவை அனுப்பவும்</string>
+    <string name="print_pdf">அச்சிடு / PDF ஆக மாற்று</string>
+    <string name="bigger_headings">பெரிய தலைப்புகள்</string>
+    <string name="increase_text_size_of_headings_according_to_level">தலைப்புகளின் உரையின் அளவை அது இருக்கும் நிலையின் படி அதிகரிக்கவும் (# h1, ## h2. ### h3…)</string>
+    <string name="current">தற்போதைய</string>
+    <string name="record_audio">ஒலி பதிவு செய்</string>
+    <string name="attach">இணைக்கவும்</string>
+    <string name="copy_file">ஆவணத்தை நகலெடுக்கவும்</string>
+    <string name="page">பக்கம்</string>
+    <string name="experimental_features">பரிசோதனை அம்சங்கள்</string>
+    <string name="tools">கருவிகள்</string>
+    <string name="reading">படிக்கிறது</string>
+    <string name="read">படி</string>
+    <string name="table">அட்டவணை</string>
+    <string name="example_of_a_markdown_table">Markdown முறையில் ஒரு அட்டவணையின் உதாரணம்</string>
+    <string name="delete_lines">வரிகளை நீக்கு</string>
+    <string name="unordered_list">எண்கள் அல்லாத பட்டியல்</string>
+    <string name="ordered_list">எண் பட்டியல்கள்</string>
+    <string name="check_list">சரிபார்ப்பு பட்டியல்</string>
+    <string name="open_link">இணைப்பைத் திற</string>
+    <string name="common_color_picker">வண்ண தேர்வு</string>
+    <string name="date_and_time">தேதி மற்றும் நேரம்</string>
+    <string name="jump_to_bottom">கீழ் பகுதிக்கு செல்லவும்</string>
+    <string name="quote">மேற்கோளிடு</string>
+    <string name="heading">தலைப்பு</string>
+    <string name="heading_1">தலைப்பு 1</string>
+    <string name="heading_2">தலைப்பு 2</string>
+    <string name="heading_3">தலைப்பு 3</string>
+    <string name="bold">தடித்த</string>
+    <string name="italic">சாய்வெழுத்து</string>
+    <string name="strikeout">அடித்திடு</string>
+    <string name="horizontal_line">கிடைமட்ட கோடு</string>
+    <string name="toggle_done">செயலின் நிலையை மாற்றவும்</string>
+    <string name="link_color">இணைப்பின் நிறம்</string>
+    <string name="add_context">சூழலை சேர்க்கவும்</string>
+    <string name="add_project">திட்டத்தை சேர்க்கவும்</string>
+    <string name="archive_completed_tasks">முடிக்கப்பட்ட செயல்களை காப்பகத்தில் சேர்க்கவும்</string>
+    <string name="sort_alphabetically">அகர வரிசைப்படி வரிசைப்படுத்து</string>
+    <string name="create_new_file_or_folder">புதிய ஆவணம் அல்லது கோப்புறையை உருவாக்கவும்</string>
+    <string name="choose_format">வடிவமைப்பை தேர்ந்தெடு</string>
+    <string name="selected">தேர்வுசெய்யப்பட்டது</string>
+    <string name="back">பின்னால்</string>
+    <string name="expand_collapse">விரிவாக்கு / சுருக்கு</string>
+    <string name="essential">அத்தியாவசியமானவை</string>
+    <string name="append_human_readable_uuid_to_new_tasks">மனிதர்கள் படிக்கக்கூடிய UUID ஐ புதிய செயல்களுடன் சேர்க்கவும்</string>
+    <string name="action_order">நடவடிக்கைகளின் வரிசை</string>
+    <string name="load_default_settings">இயல்புநிலை அமைப்புகளை ஏற்றுக</string>
+    <string name="drag">இழுக்கவும்</string>
 </resources>
