--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -364,4 +364,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="action_order">أمر العمل</string>
     <string name="load_default_settings">تحميل الإعدادات الافتراضية</string>
     <string name="drag">اسحب</string>
+    <string name="file_encryption_password">كلمة مرور تشفير الملف</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">لا توجد مجموعة كلمة مرور، لا يمكن تشفير أو فك تشفير.\nانتقل إلى الإعدادات -&gt; عام -&gt; كلمة مرور لتعيين كلمة مرور.</string>
+    <string name="encrypt_file_content">تشفير محتوى الملف</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">تعذر تشفير محتوى الملف. لم يتم حفظ الملف.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">لا يمكن فك تشفير محتوى الملف. هل استخدمت كلمة مرور خاطئة؟ هل الملف مشفر حقًا مع تشفير العلامة AES ؟</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">تم تعيين كلمة المرور بالفعل. سيؤدي تعيين كلمة مرور جديدة إلى الكتابة فوق كلمة المرور الحالية وقد لا تتمكن من الوصول إلى الملفات بعد الآن في حالة نسيت كلمة المرور.</string>
 </resources>
