--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -361,4 +361,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="expand_collapse">Prikaži / Sakrij</string>
     <string name="essential">Neophodno</string>
     <string name="append_human_readable_uuid_to_new_tasks">Dodaj čitljiv UUID u novim zadacima</string>
+    <string name="action_order">Poredak radnji</string>
+    <string name="load_default_settings">Učitaj prvobitne postavke</string>
+    <string name="drag">Prevucite</string>
 </resources>
