--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -18,7 +18,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="rename">Canvia el nom</string>
     <string name="confirm_delete">Confirma la supressió</string>
     <string name="do_you_really_want_to_delete_this_witharg">Segur que voleu suprimir aquest %s?</string>
-    <string name="confirm_overwrite">Confirma la sobreescriptura</string>
+    <string name="confirm_overwrite">Confirmeu la sobreescriptura</string>
     <string name="file_already_exists_overwerite">El fitxer ja existeix, voleu sobreescriure\'l?</string>
     <string name="browse_filesystem">Navega pel sistema de fitxers</string>
     <string name="title">Títol</string>
@@ -364,4 +364,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="action_order">Ordre d\'acció</string>
     <string name="load_default_settings">Carrega la configuració per defecte</string>
     <string name="drag">Arrossega</string>
+    <string name="file_encryption_password">Contrasenya de xifratge del fitxer</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">No s\'ha definit cap contrasenya, no es pot xifrar ni desxifrar.\nAneu a Configuració -&gt; General -&gt; Contrasenya per definir-ne una.</string>
+    <string name="encrypt_file_content">Xifra el contingut del fitxer</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">No s\'ha pogut xifrar el contingut del fitxer. El fitxer no s\'ha desat.</string>
 </resources>
