--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -364,4 +364,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="action_order">Ordre des actions</string>
     <string name="load_default_settings">Charger les paramètres par défaut</string>
     <string name="drag">Glisser</string>
+    <string name="file_encryption_password">Mot de passe de cryptage du fichier</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">Aucun mot de passe défini, ne peut pas chiffrer ou déchiffrer.\nAllez dans Paramètres -&gt; Général -&gt; Mot de passe pour définir un mot de passe.</string>
+    <string name="encrypt_file_content">Chiffrer le contenu du fichier</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">Impossible de chiffrer le contenu du fichier. Le fichier n\'a pas été enregistré.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Impossible de déchiffrer le contenu du fichier. Avez-vous utilisé un mauvais mot de passe ? Le fichier est-il vraiment chiffré avec le chiffrement AES de Markors ?</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">Mot de passe déjà défini. Définir un nouveau mot de passe écrasera le mot de passe existant et vous risquez de ne plus pouvoir accéder aux fichiers en cas d\'oubli du mot de passe.</string>
 </resources>
