--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -364,4 +364,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="action_order">Kolejność działań</string>
     <string name="load_default_settings">Załaduj domyślne ustawienia</string>
     <string name="drag">Przeciągnij</string>
+    <string name="file_encryption_password">Hasło szyfrowania plików</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">Nie ustawiono hasła, nie można zaszyfrować ani odszyfrować.\nPrzejdź do Ustawień -&gt; Ogólne -&gt; Hasło aby ustawić hasło.</string>
+    <string name="encrypt_file_content">Zaszyfruj zawartość pliku</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">Nie można zaszyfrować zawartości pliku. Plik nie został zapisany.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Nie można odszyfrować zawartości pliku. Czy użyłeś złego hasła? Czy plik jest naprawdę zaszyfrowany szyfrowaniem Markors AES?</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">Hasło już ustawione. Ustawienie nowego hasła nadpisze istniejące hasło i może nie mieć już dostępu do plików, jeśli zapomnisz hasła.</string>
 </resources>
